--- a/www/listar.html
+++ b/www/listar.html
@@ -33,7 +33,7 @@
       <div class="col-12">
         <div class="form-group">
           <label for="">Lista de Animes/Mangás:</label>
-          <select id="lista" class="form-control"></select>
+          <select id="listaA" class="form-control"></select>
         </div>
       </div>
     </div>
